templates/force-app/main/default/objects/Contact/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <description>Indicates whether this contact has pending enrichment suggestions that need review. Workflow/state field maintained by the Contact Enrichment solution.</description>
    <formula>IF(Pending_Enrichment_Count__c > 0,
    "Review Needed",
    IF(ISBLANK(Last_Enrichment_Check__c),
        "Not Checked",
        "Up to Date"
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrichment Status</label>
    <type>Text</type>
</CustomField>