templates/force-app/main/default/objects/Contact/fields/Last_Enrichment_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Enrichment_Check__c</fullName>
    <description>Date and time the AI enrichment analysis last ran for this contact. Workflow/state field maintained by the Contact Enrichment solution.</description>
    <inlineHelpText>When the enrichment check last ran for this contact.</inlineHelpText>
    <label>Last Enrichment Check</label>
    <type>DateTime</type>
</CustomField>