templates/force-app/main/default/objects/Contact/fields/Pending_Enrichment_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Enrichment_Count__c</fullName>
    <description>Number of pending enrichment suggestions for this contact. Maintained by automation when suggestions are created or resolved. Workflow/state field for the Contact Enrichment solution.</description>
    <inlineHelpText>Count of open suggestions awaiting review for this contact.</inlineHelpText>
    <defaultValue>0</defaultValue>
    <label>Pending Enrichment Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>